--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>A4 Explore with Bootstrap</title>
+    <title>A4 Expore CHALLENGE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           rel="stylesheet"/></head>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      rel="stylesheet"/>
-<link href="index.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+          rel="stylesheet"/>
+    <link href="index-challenge.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -15,51 +15,51 @@
     <div class="row">
         <div class="col-auto">
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action">
-                    <i class="fab fa-twitter"></i></a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
+                    <i class="fab fa-twitter twitter-icon"></i></a>
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
                         <i class="fas fa-home align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Home</span>
                     </div>
                 </a>
-                <a href="./index.html" class="list-group-item list-group-item-action active">
+                <a href="./index-challenge.html" class="list-group-item nav-bar-item list-group-item-action active nav-bar-item-active">
                     <div class="d-flex">
                         <i class="fas fa-hashtag align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Explore</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-bell align-self-center"></i>
+                        <i class="far fa-bell align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Notifications</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-envelope align-self-center"></i>
+                        <i class="far fa-envelope align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Messages</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-bookmark align-self-center"></i>
+                        <i class="far fa-bookmark align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Bookmarks</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-list align-self-center"></i>
-                        <span class="d-none d-xl-block d-xxl-block">&nbsp;Lists</span>
+                        <i class="fas fa-fire-alt align-self-center"></i>
+                        <span class="d-none d-xl-block d-xxl-block">&nbsp;Top Articles</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
-                        <i class="fas fa-user align-self-center"></i>
+                        <i class="far fa-user align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Profile</span>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item nav-bar-item list-group-item-action">
                     <div class="d-flex">
                         <i class="fas fa-dot-circle align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;More</span>
@@ -70,78 +70,80 @@
         </div>
 
         <div class="col-xlg-6 col-lg-6 col-md-10 col-sm-auto" id="main-content">
-            <div class="search-bar d-flex flex-row">
-                <div class="input-group">
-                    <input class="form-control border-end-0 border rounded-pill" type="text" placeholder="     Search Twitter">
-                    <i class="fa fa-search align-self-center search-shift-icon"></i>
+            <div class="side-bordered">
+                <div class="search-bar d-flex flex-row">
+                    <div class="input-group">
+                        <input class="form-control border-end-0 border rounded-pill" type="text" placeholder="     Search Twitter">
+                        <i class="fa fa-search align-self-center search-shift-icon"></i>
+                    </div>
+                    <button class="btn" type="button">
+                        <i class="fas fa-cog align-self-center"></i>
+                    </button>
                 </div>
-                <button class="btn" type="button">
-                    <i class="fas fa-cog gear-icon align-self-center"></i>
-                </button>
+                <ul class="nav nav-tabs nav-tabs-borderless mt-2 pb-1 pl-2 pr-2 d-flex justify-content-between">
+                    <li class="nav-item pill-bar-item-active">
+                        <a class="nav-link active pill-bar-item-active fw-bold" href="#">For you</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link pill-bar-item" href="#">Trending</a>
+                    </li>
+                    <li class="nav-item pill-bar-item">
+                        <a class="nav-link pill-bar-item" href="#">News</a>
+                    </li>
+                    <li class="nav-item pill-bar-item">
+                        <a class="nav-link pill-bar-item" href="#">Sports</a>
+                    </li>
+                    <li class="nav-item pill-bar-item d-none d-md-block d-lg-block d-xl-block d-xxl-block">
+                        <a class="nav-link pill-bar-item" href="#">Entertainment</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav nav-tabs mt-2">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">For you</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Trending</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sports</a>
-                </li>
-                <li class="nav-item d-none d-md-block d-lg-block d-xl-block d-xxl-block">
-                    <a class="nav-link" href="#">Entertainment</a>
-                </li>
-            </ul>
-            <img class="img-fluid mt-2" src="../../images/starship.jpg">
+            <img class="img-fluid" src="../../images/starship.jpg">
             <span class="img-text">
                 SpaceX's Starship
             </span>
             <div class="list-group suggested-posts">
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div>
+                        <div class ="text-light-gray">
                             Web Development
                         </div>
                         <div>
                             <span class="fw-bold">
                                 ReactJS <i class="fas fa-check-circle"></i>
                             </span>
-                            <span>
+                                <span class ="text-light-gray">
                                 - 2h
                             </span>
                         </div>
-                        <div class="fw-bold">
+                        <div class ="text-light-gray">
                             React.js is a component based front end library that makes it very easy to build Single Page Applications or SPAs.
                         </div>
                     </div>
                     <img class="img-post align-self-center" src="../../images/react.png">
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
                         <div>
                             <span class="fw-bold">
                                 JavaScript <i class="fas fa-check-circle"></i>
                             </span>
-                            <span>
+                            <span class ="text-light-gray">
                                 - 2h
                             </span>
                         </div>
-                        <div class="fw-bold">
+                        <div class ="text-light-gray">
                             JavaScript is a programming language that can run on browsers as well as desktops.
                         </div>
-                        <div>
+                        <div class ="text-light-gray">
                             123k Tweets
                         </div>
                     </div>
                     <img class="img-post align-self-center" src="../../images/javascript.png">
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item suggested-item list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div>
+                        <div class ="text-light-gray">
                             Web Development
                         </div>
                         <div>
@@ -149,26 +151,26 @@
                                 jQuery <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                        <div>
+                        <div class ="text-light-gray">
                             123k Tweets
                         </div>
                     </div>
                     <img class="img-post align-self-center" src="../../images/jquery.png">
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item suggested-item-bottom list-group-item-action d-flex flex-row justify-content-between">
                     <div>
-                        <div>
+                        <div class ="text-light-gray">
                             Web Development
                         </div>
                         <div>
                             <span class="fw-bold">
                                 NodeJS <i class="fas fa-check-circle"></i>
                             </span>
-                            <span>
+                            <span class ="text-light-gray">
                                 - 2h
                             </span>
                         </div>
-                        <div>
+                        <div class ="text-light-gray">
                             123k Tweets
                         </div>
                     </div>
@@ -179,77 +181,78 @@
 
         <div class="col-auto d-none d-lg-block d-xl-block d-xxl-block">
             <div class="list-group">
-                <span class="list-group-item list-group-item-action fw-bold">Who to follow</span>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <span class="list-group-item who-nav-item list-group-item-action fw-bold">Who to follow</span>
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/java.jpg">
                         <div class="ms-3">
                             <div class="fw-bold">
-                                Java <i class="fas fa-check-circle"></i>
+                                Java <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div>
+                            <div class ="text-light-gray">
                                 @Java
                             </div>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/relspace.jpg">
                         <div class="ms-3">
                             <div class="fw-bold">
-                                Relativity Space <i class="fas fa-check-circle"></i>
+                                Relativity Space <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div>
+                            <div class ="text-light-gray">
                                 @relativityspace
                             </div>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/virign.png">
                         <div class="ms-3">
                             <div class="fw-bold">
-                                Virgin Galactic <i class="fas fa-check-circle"></i>
+                                Virgin Galactic <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div>
+                            <div class ="text-light-gray">
                                 @virgingalactic
                             </div>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/nasa.png">
                         <div class="ms-3">
                             <div class="fw-bold">
-                                NASA <i class="fas fa-check-circle"></i>
+                                NASA <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div>
+                            <div class ="text-light-gray">
                                 @NASA
                             </div>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex flex-row justify-content-between">
+                <a href="#" class="list-group-item who-nav-item list-group-item-action d-flex flex-row justify-content-between">
                     <div class="d-flex flex-row">
                         <img class="img-avatar" src="../../images/tesla.png">
                         <div class="ms-3">
                             <div class="fw-bold">
-                                Tesla <i class="fas fa-check-circle"></i>
+                                Tesla <i class="fas fa-check-circle check-blue"></i>
                             </div>
-                            <div>
+                            <div class ="text-light-gray">
                                 @Tesla
                             </div>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-rounded align-self-center">Follow</button>
                 </a>
+                <a href="#" class="list-group-item blue-nav-item list-group-item-action">Show More</a>
             </div>
         </div>
     </div>
