--- a/public/tuiter/explore-old/index-challenge-a4.html
+++ b/public/tuiter/explore-old/index-challenge-a4.html
@@ -7,7 +7,7 @@
           rel="stylesheet"/></head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
           rel="stylesheet"/>
-    <link href="index-challenge.css" rel="stylesheet"/>
+    <link href="index-challenge-a4.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Home</span>
                     </div>
                 </a>
-                <a href="./index-challenge.html" class="list-group-item nav-bar-item list-group-item-action active nav-bar-item-active">
+                <a href="./index-challenge-a4.html" class="list-group-item nav-bar-item list-group-item-action active nav-bar-item-active">
                     <div class="d-flex">
                         <i class="fas fa-hashtag align-self-center"></i>
                         <span class="d-none d-xl-block d-xxl-block">&nbsp;Explore</span>
