--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,8 +7,8 @@
 <body>
   <h3>Navigation</h3>
   <ul>
-    <li><a href="HomeScreen.html">Home - A5</a></li>
-    <li><a href="ExploreScreen.html">Explore - A5</a></li>
+    <li><a href="HomeScreen">Home - A5</a></li>
+    <li><a href="ExploreScreen">Explore - A5</a></li>
 <!--    <li><a href="explore/index-a4.html">Explore - Standard</a></li>-->
 <!--    <li><a href="./explore/index-challenge-a4.html">Explore - CHALLENGE</a></li>-->
     <li><a href="notifications.html">Notifications</a></li>
