--- a/public/labs/a5/index.html
+++ b/public/labs/a5/index.html
@@ -21,7 +21,7 @@
             `<li>${todo}</li>`
         ).join('')}
             </ul>`;
-        const todos = ['Pickup kids', 'Feed dogs']
+        let todos = ['Pickup kids', 'Feed dogs']
         let html = renderTodos(todos);
         document.write(html);
     </script>
